.helm/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mp-bot-api-service
spec:
  ports:
    - port: 4200
  selector:
    app: mp-bot-api
