.helm/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx-r
spec:
  controller: k8s.io/ingress-nginx

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
spec:
  tls:
    - hosts:
        - k8s.ayebashit.io
      secretName: tls-secret
  rules:
    - host: "pay.wb-bot.fun"
      http:
        paths:
          - pathType: Prefix
            path: "/callback"
            backend:
              service:
                name: backend-service
                port:
                  number: 4200

  ingressClassName: nginx-r
